# RobotRecognition

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  CameraLabel.h  ImageLabel.h  MatLabel.h  MovementDetector.h  QRDetector.h  Susurrador.h  UIUtils.h  VideoRecognizer.h  VideoRecognizerConfiguration.h  VoiceRecognizer.h  VoiceRecorder.h  YOLOv8Model.h
src/: Camera.cpp  CameraLabel.cpp  ImageLabel.cpp  MatLabel.cpp  MovementDetector.cpp  QRDetector.cpp  VideoRecognizer.cpp  VideoRecognizerConfiguration.cpp  VoiceRecoWidget.cpp  VoiceRecognizer.cpp  YOLOv8Model.cpp
ui/: MainWindow.ui  VideoRecognizer.ui  VideoRecognizerConfiguration.ui
